[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
http = "1.3.1"
tokio = { version = "1.47.1", features = ["fs", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["cors"] }
serde = { version = "1.0.225", features = ["derive"] }
futures-util = "0.3.31"
tokio-util = { version = "0.7.13", features = ["io"] }
